<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">
    <include layout="@layout/title_common"/>

    <RadioGroup
        android:id="@+id/rgRankType"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbtnPeople"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/font_large"
            android:textColor="@drawable/selector_text_color_red_grey_dark"
            android:button="@null"
            android:gravity="center"
            android:text="@string/ranking_list_people"
            android:background="@drawable/selector_underline_red"
            tools:checked="true"
            />
        <RadioButton
            android:id="@+id/rbtnPart"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/font_large"
            android:textColor="@drawable/selector_text_color_red_grey_dark"
            android:button="@null"
            android:gravity="center"
            android:text="@string/ranking_list_part"
            android:background="@drawable/selector_underline_red"
            />

    </RadioGroup>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:padding="10dp">


                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/head1"/>

                    <TextView
                        android:id="@+id/tvUserName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/font_normal"
                        android:textColor="@color/black_third"
                        tools:text="王爱国"
                        android:layout_marginLeft="20dp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:background="@drawable/ring"
                    >

                    <TextView
                        android:id="@+id/tvScore"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/red"
                        android:textSize="@dimen/font_larger"
                        android:text="第6名"/>

                    <TextView
                        android:id="@+id/tvTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/red"
                        android:textSize="@dimen/font_larger"
                        android:text="42分钟"
                        android:layout_marginTop="16dp"/>


                </LinearLayout>


                <com.baseres.ScrollListView
                    android:id="@+id/lvRank"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                </com.baseres.ScrollListView>




            </LinearLayout>








        </ScrollView>


        <RadioGroup
            android:id="@+id/rgRankPeriod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp">

            <RadioButton
                android:id="@+id/rbtnWeekly"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="@dimen/font_normal"
                android:button="@null"
                android:textColor="@drawable/selector_text_color_yellow_red"
                android:padding="10dp"
                android:background="@drawable/selector_rbtn_left"
                android:text="@string/ranking_list_weekly"
                android:checked="true"
                />


            <RadioButton
                android:id="@+id/rbtnMonthly"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="@dimen/font_normal"
                android:button="@null"
                android:textColor="@drawable/selector_text_color_yellow_red"
                android:padding="10dp"
                android:background="@drawable/selector_rbtn_middle"
                android:text="@string/ranking_list_monthly"
                />

            <RadioButton
                android:id="@+id/rbtnQuarterly"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="@dimen/font_normal"
                android:button="@null"
                android:textColor="@drawable/selector_text_color_yellow_red"
                android:padding="10dp"
                android:background="@drawable/selector_rbtn_right"
                android:text="@string/ranking_list_quarterly"
                />

        </RadioGroup>

    </RelativeLayout>












</LinearLayout>